<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_edit_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LargePrimaryDarkFont.Bold"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_layout"
        android:hint="@string/title_edit_hint"
        app:hintTextAppearance="@style/Hint"
        app:errorTextAppearance="@style/Error"
        android:layout_marginBottom="@dimen/marginEditDialog">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
           />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LargePrimaryDarkFont.Bold"/>

    <Spinner
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginEditDialog"
        android:entries="@array/priority"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/colorAccent"
        android:layout_marginBottom="@dimen/marginEditDialog"/>



        <TextView
            android:text="@string/due_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LargePrimaryDarkFont.Bold"/>

        <DatePicker
            android:id="@+id/duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/SaveButton">
        </Button>

    </LinearLayout>
